Revert "Fixing Sonar Performance profile issues"